// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List.pagination renders pagination correctly 1`] = `
<div
  class="infini-list infini-list-vertical infini-list-split infini-list-something-after-last-item"
>
  <div
    class="infini-spin-nested-loading"
  >
    <div
      class="infini-spin-container"
    >
      <div
        class="infini-list-item infini-list-item-no-flex"
      >
        Jack
      </div>
      <div
        class="infini-list-item infini-list-item-no-flex"
      >
        Lucy
      </div>
    </div>
  </div>
  <div
    class="infini-list-pagination"
  >
    <ul
      class="infini-pagination my-page"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="infini-pagination-disabled infini-pagination-prev"
        title="Previous Page"
      >
        <a
          class="infini-pagination-item-link"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </a>
      </li>
      <li
        class="infini-pagination-item infini-pagination-item-1 infini-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="infini-pagination-item infini-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" infini-pagination-next"
        tabindex="0"
        title="Next Page"
      >
        <a
          class="infini-pagination-item-link"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
              />
            </svg>
          </i>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`List.pagination should change page size work 1`] = `
<ul
  class="infini-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="infini-pagination-disabled infini-pagination-prev"
    title="Previous Page"
  >
    <a
      class="infini-pagination-item-link"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="infini-pagination-item infini-pagination-item-1 infini-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    aria-disabled="true"
    class="infini-pagination-disabled infini-pagination-next"
    title="Next Page"
  >
    <a
      class="infini-pagination-item-link"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="infini-pagination-options"
  >
    <div
      class="infini-pagination-options-size-changer infini-select infini-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls="test-uuid"
        aria-expanded="false"
        aria-haspopup="true"
        class="infini-select-selection
            infini-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="infini-select-selection__rendered"
        >
          <div
            class="infini-select-selection-selected-value"
            style="display: block; opacity: 1;"
            title="10 / page"
          >
            10 / page
          </div>
        </div>
        <span
          class="infini-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down infini-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`List.pagination should change page size work 2`] = `
<ul
  class="infini-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="infini-pagination-disabled infini-pagination-prev"
    title="Previous Page"
  >
    <a
      class="infini-pagination-item-link"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="infini-pagination-item infini-pagination-item-1 infini-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    aria-disabled="true"
    class="infini-pagination-disabled infini-pagination-next"
    title="Next Page"
  >
    <a
      class="infini-pagination-item-link"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="infini-pagination-options"
  >
    <div
      class="infini-pagination-options-size-changer infini-select infini-select-focused infini-select-enabled"
      style=""
    >
      <div
        aria-autocomplete="list"
        aria-controls="test-uuid"
        aria-expanded="false"
        aria-haspopup="true"
        class="infini-select-selection
            infini-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="infini-select-selection__rendered"
        >
          <div
            class="infini-select-selection-selected-value"
            style="display: block; opacity: 1;"
            title="30 / page"
          >
            30 / page
          </div>
        </div>
        <span
          class="infini-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down infini-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <div>
      <div
        class="infini-select-dropdown infini-select-dropdown--single infini-select-dropdown-placement-bottomLeft slide-up-leave"
        style="left: -999px; top: -995px;"
      >
        <div
          id="test-uuid"
          style="overflow: auto; transform: translateZ(0);"
        >
          <ul
            class="infini-select-dropdown-menu  infini-select-dropdown-menu-root infini-select-dropdown-menu-vertical"
            role="listbox"
            tabindex="0"
          >
            <li
              aria-selected="false"
              class="infini-select-dropdown-menu-item"
              role="option"
              style="user-select: none;"
              unselectable="on"
            >
              10 / page
            </li>
            <li
              aria-selected="false"
              class="infini-select-dropdown-menu-item"
              role="option"
              style="user-select: none;"
              unselectable="on"
            >
              20 / page
            </li>
            <li
              aria-selected="true"
              class="infini-select-dropdown-menu-item infini-select-dropdown-menu-item-selected"
              role="option"
              style="user-select: none;"
              unselectable="on"
            >
              30 / page
            </li>
            <li
              aria-selected="false"
              class="infini-select-dropdown-menu-item"
              role="option"
              style="user-select: none;"
              unselectable="on"
            >
              40 / page
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`List.pagination should default work 1`] = `
<ul
  class="infini-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" infini-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="infini-pagination-item-link"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="infini-pagination-item infini-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="infini-pagination-item infini-pagination-item-2 infini-pagination-item-active"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    aria-disabled="true"
    class="infini-pagination-disabled infini-pagination-next"
    title="Next Page"
  >
    <a
      class="infini-pagination-item-link"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="infini-pagination-options"
  >
    <div
      class="infini-pagination-options-size-changer infini-select infini-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls="test-uuid"
        aria-expanded="false"
        aria-haspopup="true"
        class="infini-select-selection
            infini-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="infini-select-selection__rendered"
        >
          <div
            class="infini-select-selection-selected-value"
            style="display: block; opacity: 1;"
            title="3 / page"
          >
            3 / page
          </div>
        </div>
        <span
          class="infini-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down infini-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </li>
</ul>
`;
